--- a/acumalaka-index.html
+++ b/acumalaka-index.html
@@ -11,7 +11,7 @@
     <h1>Attention</h1>
     <img src="acumalaka-frog.png" alt="acumalaka-frog">
     <p>MUAHAHAHAHAHAHA LOL</p>
-    <p>new text</p>
+    <p>Lompat</p>
 </body>
 
 </html>
