--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="my-style.css">
 </head>
+
 <body>
     <h1>Github Materi</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi maiores doloribus, blanditiis, atque quos autem recusandae nihil tenetur quia voluptatum dicta necessitatibus veritatis. Expedita illo asperiores quia sapiente eos maxime.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi maiores doloribus, blanditiis, atque quos autem
+        recusandae nihil tenetur quia voluptatum dicta necessitatibus veritatis. Expedita illo asperiores quia sapiente
+        eos maxime.</p>
     <p>aasdasd</p>
+    <p>new text</p>
 </body>
+
 </html>
